# skymap

ClibPDF/source/: Makefile  cpdflib.h
cgic/: capture  cgictest
data/: Makefile
egret/: Makefile  Makefile~  Notes  README  abell_clusters  dc_clusters  drcg_abell.pl  drcg_dc.pl  egret.3  egret.c  egret.h  egret.util.c  egretc.c  egretc.c~  micro_db
gd-2.0.15gif/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.hin  config.status  configure  configure.ac  gd.c  gd.h  gd2togif.c  gd_lzw_out.c  gdcmpgif.c  gdfontg.c  gdfontl.c  gdfontl.h  gdfontmb.c  gdfontmb.h  gdfonts.h  gdfontt.h  gdft.c  gdtest.c  gdtestft.c  index.html  libtool
gd-2.0.15gif/.deps/: annotate.Po  fontsizetest.Po  fontwheeltest.Po  gd.Plo  gd2copypal.Po  gd2time.Po  gd2togif.Po  gd2topng.Po  gd_biggif_out.Plo  gd_gd.Plo  gd_gd2.Plo  gd_gif_in.Plo  gd_gif_out.Plo  gd_io.Plo  gd_io_dp.Plo  gd_io_file.Plo  gd_io_ss.Plo  gd_jpeg.Plo  gd_lzw_out.Plo  gd_png.Plo  gd_ss.Plo  gd_topal.Plo  gd_wbmp.Plo  gdcache.Plo  gdcmpgif.Po  gddemo.Po  gdfontg.Plo  gdfontl.Plo  gdfontmb.Plo  gdfonts.Plo  gdfontt.Plo  gdft.Plo  gdhelpers.Plo  gdkanji.Plo  gdparttopng.Po  gdtest.Po  gdtestft.Po  gdtopng.Po  gdxpm.Plo  giftogd2.Po  (+5 more)
gd-2.0.15gif/config/: Makefile  Makefile.in  gdlib-config
gd-2.0.15gif/test/: Makefile  Makefile.in
gd1.2c/: Makefile  gd.c  gd.h  gdfontg.h  gdfonts.c  gdfontt.c  webgif  webgif.c
libastro/: Imakefile  Makefile  Makefile.smple  README  aa_hadec.c  aberration.c  anomaly.c  ap_as.c  astro.h  auxil.c  chap95.c  chap95.h  circum.c  circum.h  comet.c  dbfmt.c  deltat.c  earthsat.c  eq_ecl.c  eq_gal.c  formats.c  helio.c  libration.c  misc.c  mjd.c  mooncolong.c  nutation.c  obliq.c  parallax.c  plans.c  precess.c  preferences.h  reduce.c  refract.c  riset.c  riset_cir.c  sphcart.c  sun.c  utc_gst.c  vsop87.c  (+1 more)
libastro-3.7.5/: Makefile  astro.h  constel.c
makegrad/: Makefile  makegrad  makegrad.c  makegradient.pl
makehor/: Makefile  makehor.c  makehorizont.pl  stmagf.h
map+/: about.html  about_en.html  coords.html  coords_en.html  crlab.html  crlab_en.html  index.html  index_en.html
map+/components/: a20_stars.msn  about.msn  cellsize.msn  coord.msn  fsize.msn  gal_par.msn  galmaglim.msn  help_params.msn  maglim.msn  map_par.msn  map_size.msn  rc3_objects.msn  sky_objects.msn  star_par.msn  telescope.msn  tycho_stars.msn
map+/components.en/: a20_stars.msn  about.msn  coord.msn  fsize.msn  gal_par.msn  galmaglim.msn  help_params.msn  maglim.msn  map_par.msn  map_size.msn  rc3_objects.msn  sky_objects.msn  star_par.msn  telescope.msn  tycho_stars.msn
map+/components.en/old/: coord.msn  form_map.msn  maglim.msn  rc3params.msn  telescopes.msn
map+/components.en/oldold/: about.msn  form_map.msn  rc3params.msn  telescopes.msn
map+/components/old/: cellsize.msn  fsize.msn  galmaglim.msn  help_params.msn  map_params.msn  map_size.msn  starlabels.msn
map+/components/oldold/: form_map_simple.msn  map_params.msn  starlabels.msn
map+/icons/makering/: Makefile  mr.c
modules/GetNear/: GetNear.c  GetNear.pm  GetNear.xs  Makefile.PL  Makefile~
modules/GetNear/blib/man3/: SkyMap::GetNear.3
modules/GetNear/t/: test.t
modules/HL_Client/: HL_Client.c  HL_Client.xs  Makefile  Makefile.PL
modules/HL_Client/blib/man3/: Astro::HL_Client.3
modules/HL_Client/t/: test.t
modules/NED_Client/: Makefile.PL  Makefile.old  NED_Client.c  NED_Client.xs
modules/NED_Client/blib/man3/: Astro::NED_Client.3
modules/NED_Client/t/: test.t
nedclient_3/: Makefile  Makefile.in  README  byname.c  configure  configure.in  ex_refcode.c  iau.c  name_resolver.c  nearname.c  nearposn.c  ned_cif.c  ned_cli.c  ned_cli.c~  ned_client.h  ned_err.c  ned_int.h  ned_sk.c  ref.c
sky/: Makefile  Makefile~  add_obj_button.c  boundaries.c  coord.c  draw_functions.c  equ_init.c  galaxies.c  get_near.c  get_near.h  hl_fetch.c  mid_init.c  misc.c  objects_read.c  otherobjs.c  pol_init.c  prepare.c  rc3_read.c  read_a20.c  read_tycho.c  skyc.h  skyc2.c  skyc_def.h  skyc_hldef.h  skyc_readdata.h  skyc_struct.h
sky_chart/: GIFtoGD.pl  Makefile  constel.h  skyc.c  skyc.h  stmagf.h
sky_chart_for_mail.ru/: Makefile  constel.h  milkyway.h  skyc.c
(+5 files in other folders)
